fix special characters

--- a/a/air-photos/index.html
+++ b/a/air-photos/index.html
@@ -63,7 +63,7 @@
 				<li><a href="/l/lequeux-maurice/index.html">Maurice Lequeux</a></li>
 				<li><a href="/l/levy-robert/index.html">Robert Lévy</a></li>
 				<li><a href="/l/lewental-salmen/index.html">Salmen Lewental</a></li>
-				<li><a href="/l/lewinska-pelagia/index.html">Pelagia Lewińska</a></li>
+				<li><a href="/l/lewinska-pelagia/index.html">Pelagia Lewi&#324;ska</a></li>
 				<li><a href="/m/mandelbaum-henryk/index.html">Henryk Mandelbaum</a></li>
 				<li><a href="/m/marcus-kurt/index.html">Kurt Marcus</a></li>
 				<li><a href="/m/muller-filip/index.html">Filip M&uuml;ller</a></li>
