--- a/c/carbon-monoxide/index.html
+++ b/c/carbon-monoxide/index.html
@@ -104,7 +104,7 @@
 					</tr>
 					<tr>
 						<td> Diesel-engine exhaust </td>
-						<td> <a href="/b/belzec/index.html">Be&#322;żec Camp</a> </td>
+						<td> <a href="/b/belzec/index.html">Be&#322;&#380;ec Camp</a> </td>
 					</tr>
 					<tr>
 						<td> (gasoline-)engine exhaust </td>
