--- a/c/cliches-about-the-holocaust/index.html
+++ b/c/cliches-about-the-holocaust/index.html
@@ -36,7 +36,7 @@
 				<li>Poison-gas generators, built and deployed in their hundreds of thousands, were never used for murder (see the entry <a href="/p/producer-gas/index.html">Producer Gas</a>).</li>
 				<li>State-of-the-art Zyklon-B circulation systems were never considered or used for homicidal purposes. (See the section <q>Zyklon B Fumigations</q> of the entry on <a href="/f/fumigation-gas-chamber/index.html#Zyklon">Fumigation Gas Chamber</a>).</li>
 				<li>Although mass cremation facilities were briefly considered during the catastrophic peak of the <a href="/t/typhus/index.html">typhus</a> epidemic in <a href="/a/auschwitz/index.html">Auschwitz</a>, they were never planned, let alone built (see <a href="/bibliography/index.html#Mattogno_Deana">Mattogno/Deana</a>, Part 1, pp. 143-155, 288-294).</li>
-				<li>In the so-called pure <a href="/e/extermination-camps/index.html">extermination camps</a> (see the entries on <a href="/b/belzec/index.html">Be&#322;żec</a>, <a href="/s/sobibor/index.html">Sobib&oacute;r</a>, <a href="/t/treblinka/index.html">Treblinka</a>), no <a href="/c/crematoria/index.html">crematoria</a> were ever built. <a href="/c/chelmno/index.html">Che&#322;mno</a> only received a primitive field furnace. (See the entry on that camp.)</li>
+				<li>In the so-called pure <a href="/e/extermination-camps/index.html">extermination camps</a> (see the entries on <a href="/b/belzec/index.html">Be&#322;&#380;ec</a>, <a href="/s/sobibor/index.html">Sobib&oacute;r</a>, <a href="/t/treblinka/index.html">Treblinka</a>), no <a href="/c/crematoria/index.html">crematoria</a> were ever built. <a href="/c/chelmno/index.html">Che&#322;mno</a> only received a primitive field furnace. (See the entry on that camp.)</li>
 			</ul>
 			<h6>
 				Common Physical Abuse
