--- a/c/cremation-propaganda/index.html
+++ b/c/cremation-propaganda/index.html
@@ -129,7 +129,7 @@
 												</td>
 					</tr>
 					<tr>
-						<td><a href="/c/chybinski-stanislaw/index.html">Stanis&#322;aw Chybiński</a></td>
+						<td><a href="/c/chybinski-stanislaw/index.html">Stanis&#322;aw Chybi&#324;ski</a></td>
 						<td>
 
 							3
