--- a/c/index.html
+++ b/c/index.html
@@ -31,7 +31,7 @@
 						<li><a href="/c/chelmno/index.html">Che&#322;mno</a></li>
 						<li><a href="/c/chomka-wladyslaw/index.html">Chomka, W&#322;adys&#322;aw</a></li>
 						<li><a href="/c/christophersen-thies/index.html">Christophersen, Thies</a></li>
-						<li><a href="/c/chybinski-stanislaw/index.html">Chybiński, Stanis&#322;aw</a></li>
+						<li><a href="/c/chybinski-stanislaw/index.html">Chybi&#324;ski, Stanis&#322;aw</a></li>
 						<li><a href="/c/cliches-about-the-holocaust/index.html">Clichés about the Holocaust</a></li>
 						<li><a href="/c/code-language/index.html">Code Language</a></li>
 						<li><a href="/c/cohen-leon/index.html">Cohen, Leon</a></li>
