--- a/change-log/index.html
+++ b/change-log/index.html
@@ -36,7 +36,7 @@
 				October 14, 2024
 			</h3>
 			<ul>
-				<li>Corrected typos and bad grammar, improved expressions and/or added a few more cross references in a wide range of entries (Ukraine, Vaillant-Couturier, van Roden, Veil, Venezia, Morris, Venezia, Shlomo, Ventilation, Vrba, Wannsee Conference, War Refugee Board Report, Warsaw Ghetto, Warszawski, Wedding Rings, Weiss, Weliczker, Widmann, Wiernik, Witnesses against Mass Murder, Wolff, Wolken, Yad Vashem, Yugoslavia, Zentralsauna, Ź&#322;obnicki, Zyklon B, Zyklon-B Introduction Devices).</li>
+				<li>Corrected typos and bad grammar, improved expressions and/or added a few more cross references in a wide range of entries (Ukraine, Vaillant-Couturier, van Roden, Veil, Venezia, Morris, Venezia, Shlomo, Ventilation, Vrba, Wannsee Conference, War Refugee Board Report, Warsaw Ghetto, Warszawski, Wedding Rings, Weiss, Weliczker, Widmann, Wiernik, Witnesses against Mass Murder, Wolff, Wolken, Yad Vashem, Yugoslavia, Zentralsauna, &#377;&#322;obnicki, Zyklon B, Zyklon-B Introduction Devices).</li>
 				<li>Entry on <a href="/v/venezia-shlomo/index.html">Venezia, Shlomo</a>: a reference to a dedicated paper on this witness was added: <a href="/bibliography/index.html#Mattogno2010a">Mattogno 2010a</a>, with a related addition to the <a href="/bibliography/index.html">Bibliography</a>: Mattogno, Carlo 2010a. <q>&lsquo;The Truth about the Gas Chambers&rsquo;?,</q> <i>Inconvenient History,</i> Vol. 2, No. 1, 2010, pp. 70-125; <a href="https://codoh.com">codoh.com/library/document/the-truth-about-the-gas-chambers/</a>.</li>
 				<li>Entry on <a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik, Jankiel</a>: A list item was added addressing the transformation of Wiernik&rsquo;s chlorine-filling flap:
 				<blockquote>
@@ -65,7 +65,7 @@
 				October 13, 2024
 			</h3>
 			<ul>
-				<li>Corrected typos and bad grammar, improved expressions and added a few more cross references in a wide range of entries (Ravensbr&uuml;ck, Razgonayev, Red Cross, Reder, Refeeding Syndrome, Religion, Resettlement, R&ouml;gner, Rosenberg, Eliyahu, Rosenblum, Rosenthal, Rosin, Sachsenhausen, Sackar, Schindler&rsquo;s List, Schwarz, Sehn, Self-Immolating Bodies, Semlin, Shanghai, Showers, Shrunken Heads, Six Million, Sobibor, Sompolinski, Sonderkommando, Source Criticism, Soviet Union, Special Treatment, Srebrnik, Steyuk, Strawczyński, Stutthof, Swimming Pool, Szmajzner, Tauber, Tesch &amp; Stabenow, Theresienstadt, Tools, Torture, Towels, Transit Camps, Trawniki, Treblinka, Trubakov, Turowski, typhus).</li>
+				<li>Corrected typos and bad grammar, improved expressions and added a few more cross references in a wide range of entries (Ravensbr&uuml;ck, Razgonayev, Red Cross, Reder, Refeeding Syndrome, Religion, Resettlement, R&ouml;gner, Rosenberg, Eliyahu, Rosenblum, Rosenthal, Rosin, Sachsenhausen, Sackar, Schindler&rsquo;s List, Schwarz, Sehn, Self-Immolating Bodies, Semlin, Shanghai, Showers, Shrunken Heads, Six Million, Sobibor, Sompolinski, Sonderkommando, Source Criticism, Soviet Union, Special Treatment, Srebrnik, Steyuk, Strawczy&#324;ski, Stutthof, Swimming Pool, Szmajzner, Tauber, Tesch &amp; Stabenow, Theresienstadt, Tools, Torture, Towels, Transit Camps, Trawniki, Treblinka, Trubakov, Turowski, typhus).</li>
 				<li>The entry on <a href="/r/religion-holocaust-as/index.html">Religion</a> received a new list item: <u>Holy Pilgrimages</u> = voluntary visits of millions of individuals as well as compulsory visits by entire school classes and college courses from all over the world to the Holy Sites and Shrines.</li>
 				<li>The entry on <a href="/r/resettlement/index.html">Resettlement</a> received three new source references, with their sources being listed in the <a href="/bibliography/index.html">Bibliography</a>:
 				<ul>
@@ -152,7 +152,7 @@
 				<li>The entry on <a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a> received a reference to <a href="/bibliography/index.html#Yerman">Yerm&aacute;n <i>et al.</i> 2018</a>.</li>
 				<li>Entry on <a href="/s/semlin/index.html">Semlin</a>: The camp&rsquo;s location is now briefly described.</li>
 				<li>Entry on <a href="/s/shrunken-heads-myth-of/index.html">Shrunken Heads</a>: the quote on <q>pathological phase of the Nazi culture</q> was corrected (the words <q>phase of the</q> were missing).</li>
-				<li>Entry on <a href="/s/sobibor/index.html">Sobib&oacute;r</a>: The camp&rsquo;s location is now briefly described. In addition, a major correction on &#322;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (The Belzec paper published before &#322;ukaszkiewicz&rsquo;s article on Sobib&oacute;r in the same issue of the same periodical was authored by Eugeniusz Szrojt, who was more likely influenced by &#322;ukaszkiewicz&rsquo;s Treblinka article of the previous year than &#322;ukaszkiewicz having been influenced by Szrojt):<br />
+				<li>Entry on <a href="/s/sobibor/index.html">Sobib&oacute;r</a>: The camp&rsquo;s location is now briefly described. In addition, a major correction on &#321;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (The Belzec paper published before &#321;ukaszkiewicz&rsquo;s article on Sobib&oacute;r in the same issue of the same periodical was authored by Eugeniusz Szrojt, who was more likely influenced by &#321;ukaszkiewicz&rsquo;s Treblinka article of the previous year than &#321;ukaszkiewicz having been influenced by Szrojt):<br />
 				<table class="table">
 					<thead>
 						<tr>
@@ -162,8 +162,8 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>&#322;ukaszkiewicz simply copied the claims for the Belzec Camp, which he had described in a chapter just prior to writing about Sobib&oacute;r.</td>
-							<td>&#322;ukaszkiewicz simply copied the narrative he had developed for the Treblinka Camp in an article he had published the previous year (see the entry on that camp).</td>
+							<td>&#321;ukaszkiewicz simply copied the claims for the Belzec Camp, which he had described in a chapter just prior to writing about Sobib&oacute;r.</td>
+							<td>&#321;ukaszkiewicz simply copied the narrative he had developed for the Treblinka Camp in an article he had published the previous year (see the entry on that camp).</td>
 						</tr>
 					</tbody>
 				</table>
@@ -175,7 +175,7 @@
 				<li>Entry on Torture: as with the entry on <a href="/d/dachau-trials/index.html">Dachau Trials</a>: Edward L. van Roden was demoted to a mere Pennsylvania judge.</li>
 				<li>Entry on <a href="/t/towels-soap-toothbrushes-inside-gas-chambers/index.html">Towels, Soap</a> etc: The last sentence on convergence in a lie was deleted, as it repeated in other words what is said already in the last sentence before the final list.</li>
 				<li>Entry on <a href="/t/transit-camps/index.html">Transit Camps</a>: three more sources are given, the same as for the entry on Resettlement; see above.</li>
-				<li>Entry on <a href="/t/treblinka/index.html">Treblinka</a>: The camp&rsquo;s location is now briefly described. In the summary table of witness claims on Treblinka, the first two entries for Abe Kon in the last column were changed from <q>400 persons/m&sup2;</q> to <q>400 persons per chamber</q>. Apologies for the wrong unit given earlier (m&sup2;). As with the entry on Sobib&oacute;r, a correction on &#322;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (Eugeniusz Szrojt&rsquo;s Belzec paper was published <i>after</i> &#322;ukaszkiewicz&rsquo;s article on Treblinka):<br />
+				<li>Entry on <a href="/t/treblinka/index.html">Treblinka</a>: The camp&rsquo;s location is now briefly described. In the summary table of witness claims on Treblinka, the first two entries for Abe Kon in the last column were changed from <q>400 persons/m&sup2;</q> to <q>400 persons per chamber</q>. Apologies for the wrong unit given earlier (m&sup2;). As with the entry on Sobib&oacute;r, a correction on &#321;ukaszkiewicz&rsquo;s mendacious method of <q>writing</q> history became necessary as shown below. (Eugeniusz Szrojt&rsquo;s Belzec paper was published <i>after</i> &#321;ukaszkiewicz&rsquo;s article on Treblinka):<br />
 				<table class="table">
 					<thead>
 						<tr>
@@ -185,8 +185,8 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>&#322;ukaszkiewicz mainly took Wiernik&rsquo;s later version of the tale, which aligned nicely with the version he had already cobbled together for the Belzec Camp, and dropped all the rest.</td>
-							<td>&#322;ukaszkiewicz basically took Wiernik&rsquo;s later version of the tale, and dropped all the rest.</td>
+							<td>&#321;ukaszkiewicz mainly took Wiernik&rsquo;s later version of the tale, which aligned nicely with the version he had already cobbled together for the Belzec Camp, and dropped all the rest.</td>
+							<td>&#321;ukaszkiewicz basically took Wiernik&rsquo;s later version of the tale, and dropped all the rest.</td>
 						</tr>
 					</tbody>
 				</table>
@@ -268,7 +268,7 @@
 				October 11, 2024
 			</h3>
 			<ul>
-				<li>Corrected typos and bad grammar, improved expressions and added a few more cross references in a wide range of entries (Berlyant, Davydov, Doliner, International Military Tribunal, International Tracing Service, Iron Blue, Israel, Bruno, Italy, J&auml;ger Report, Jankowski, Janowska Camp, Jasenovac, Kaper, Karasik, Karski, Kharkov, Klooga, Koch, Ilse, Koch, Karl, Korherr, Korn, Kramer, Kranz, Krasnodar, Kraus, Kremer, Kuklia, Kula, Kulka, Langfus, Lengyel, Lequeux, Lettich, Lewental, Lewińska, Lichtenstein, Liebehenschel, Litwinska, Lodz, London Cage, &#322;ukaszkiewicz).</li>
+				<li>Corrected typos and bad grammar, improved expressions and added a few more cross references in a wide range of entries (Berlyant, Davydov, Doliner, International Military Tribunal, International Tracing Service, Iron Blue, Israel, Bruno, Italy, J&auml;ger Report, Jankowski, Janowska Camp, Jasenovac, Kaper, Karasik, Karski, Kharkov, Klooga, Koch, Ilse, Koch, Karl, Korherr, Korn, Kramer, Kranz, Krasnodar, Kraus, Kremer, Kuklia, Kula, Kulka, Langfus, Lengyel, Lequeux, Lettich, Lewental, Lewi&#324;ska, Lichtenstein, Liebehenschel, Litwinska, Lodz, London Cage, &#321;ukaszkiewicz).</li>
 				<li><a href="/j/jasenovac/index.html">Jasenovac</a> and <a href="/k/klooga/index.html">Klooga</a> camps: added a phrase each on location of these camps.</li>
 				<li><a href="/k/kraus-ota/index.html">Kraus, Ota</a>: expanded the last quote from <q>about 400,000 people who were political prisoners.</q> To <q>about 400,000 people who were political prisoners, so that the total number of deaths in Brzezinka [Birkenau] amounts to 4,000,000.</q></li>
 				<li>Added an item to the entry <a href="/a/absurd-claims/index.html">Absurd Claims</a> on biogas usage for homicides.</li>
