--- a/d/index.html
+++ b/d/index.html
@@ -26,7 +26,7 @@
 						<li><a href="/d/dachau-museum/index.html">Dachau Museum</a></li>
 						<li><a href="/d/dachau-trials/index.html">Dachau Trials</a></li>
 						<li><a href="/d/daluege-kurt-2/index.html">Daluege, Kurt</a></li>
-						<li><a href="/d/damjanovic-momcilo/index.html">Damjanović, Momčilo</a></li>
+						<li><a href="/d/damjanovic-momcilo/index.html">Damjanovi&#263;, Mom&#269;ilo</a></li>
 						<li><a href="/d/davydov-vladimir/index.html">Davydov, Vladimir</a></li>
 						<li><a href="/d/dawidowski-roman/index.html">Dawidowski, Roman</a></li>
 						<li><a href="/d/ddt/index.html">DDT</a></li>
