--- a/e/exaggerated-death-tolls/index.html
+++ b/e/exaggerated-death-tolls/index.html
@@ -81,7 +81,7 @@
 						<td> 30-60 </td>
 					</tr>
 					<tr>
-						<td> <a href="/b/belzec/index.html">Be&#322;żec</a> </td>
+						<td> <a href="/b/belzec/index.html">Be&#322;&#380;ec</a> </td>
 						<td> 3 million </td>
 						<td> 600,000 </td>
 						<td> 5 </td>
