--- a/h/homicidal-gas-chambers/index.html
+++ b/h/homicidal-gas-chambers/index.html
@@ -125,7 +125,7 @@
 			<ol>
 				<li>Hitler &rarr; <i>F&uuml;hrer</i> chancellery &rarr; The technical services of the German FBI (<i>Kriminaltechnisches Institut</i>): carbon monoxide in steel bottles (euthanasia centers, Majdanek) or gas vans (Che&#322;mno, <i>Einsatzgruppen</i>);</li>
 				<li>Hitler &rarr; Himmler &rarr; Eichmann (or Fritzsch) &rarr; H&ouml;ss: Zyklon B (Auschwitz/Majdanek);</li>
-				<li>Himmler &rarr; Globocnik &rarr; H&ouml;fle &rarr; Wirth: exhaust gases of diesel and/or gasoline engines (Be&#322;żec/Sobib&oacute;r/Treblinka).</li>
+				<li>Himmler &rarr; Globocnik &rarr; H&ouml;fle &rarr; Wirth: exhaust gases of diesel and/or gasoline engines (Be&#322;&#380;ec/Sobib&oacute;r/Treblinka).</li>
 			</ol>
 			<p>
 				Any of the other minor camps could have had some other chain of command, but there is not even enough anecdotal evidence in these cases, let alone any documents, and so it is futile to draw similar lines of command.
@@ -168,7 +168,7 @@
 						<td> <a href="/d/diesel-exhaust/index.html">Diesel-engine exhaust gas</a> </td>
 					</tr>
 					<tr>
-						<td> Be&#322;żec </td>
+						<td> Be&#322;&#380;ec </td>
 						<td> subterranean murder chamber,<br />
 						unslaked lime, high voltage, vacuum, collapsible gas-chamber floor, suffocation with human excrements </td>
 						<td> <a href="/d/diesel-exhaust/index.html">Diesel-engine exhaust gas</a> </td>
