--- a/l/index.html
+++ b/l/index.html
@@ -37,7 +37,7 @@
 						<li><a href="/l/levi-primo/index.html">Levi, Primo</a></li>
 						<li><a href="/l/levy-robert/index.html">Lévy, Robert</a></li>
 						<li><a href="/l/lewental-salmen/index.html">Lewental, Salmen</a></li>
-						<li><a href="/l/lewinska-pelagia/index.html">Lewińska, Pelagia</a></li>
+						<li><a href="/l/lewinska-pelagia/index.html">Lewi&#324;ska, Pelagia</a></li>
 						<li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
 						<li><a href="/l/lichtmann-icek/index.html">Lichtmann, Icek</a></li>
 						<li><a href="/l/liebehenschel-arthur/index.html">Liebehenschel, Arthur</a></li>
@@ -45,7 +45,7 @@
 						<li><a href="/l/litwinska-sofia/index.html">Litwinska, Sofia</a></li>
 						<li><a href="/l/lodz-ghetto/index.html">Lodz Ghetto</a></li>
 						<li><a href="/l/london-cage/index.html">London Cage</a></li>
-						<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz, Zdzis&#322;aw</a></li>
+						<li><a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz, Zdzis&#322;aw</a></li>
 						<li><a href="/l/lumberjacks/index.html">Lumberjacks</a></li>
 						<li><a href="/l/luxembourg/index.html">Luxembourg</a></li>
 						<li><a href="/l/lviv/index.html">Lviv</a></li>
