--- a/l/lumberjacks/index.html
+++ b/l/lumberjacks/index.html
@@ -163,7 +163,7 @@
 						<td> 300 </td>
 					</tr>
 					<tr>
-						<td><a href="/d/damjanovic-momcilo/index.html">Momčilo Damjanović</a>/<a href="/s/semlin/index.html">Semlin</a></td>
+						<td><a href="/d/damjanovic-momcilo/index.html">Mom&#269;ilo Damjanovi&#263;</a>/<a href="/s/semlin/index.html">Semlin</a></td>
 						<td> 68,000 </td>
 						<td> 17,000 </td>
 						<td> 38 </td>
