--- a/m/mass-graves/index.html
+++ b/m/mass-graves/index.html
@@ -80,7 +80,7 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><a href="/b/belzec/index.html">Be&#322;żec</a></td>
+						<td><a href="/b/belzec/index.html">Be&#322;&#380;ec</a></td>
 						<td> 441,000 </td>
 						<td> ~ 18,565 </td>
 						<td> ~ 23.8 </td>
