--- a/p/packing-density-inside-gas-chamber/index.html
+++ b/p/packing-density-inside-gas-chamber/index.html
@@ -117,7 +117,7 @@
 					<tr>
 						<td>
 
-							<a href="/c/chybinski-stanislaw/index.html">Stanis&#322;aw Chybiński</a>
+							<a href="/c/chybinski-stanislaw/index.html">Stanis&#322;aw Chybi&#324;ski</a>
 												</td>
 						<td></td>
 						<td>
