--- a/p/pilecki-witold/index.html
+++ b/p/pilecki-witold/index.html
@@ -27,7 +27,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Witold Pilecki (13 May 1901 &mdash; 25 May 1948) was a lieutenant in the Polish Clandestine Army in German-occupied Poland. As such, he was arrested on 19 September 1940 and interned at Auschwitz under the name Tadeusz Serafiński. Pilecki organized a Polish resistance group in that camp. He claimed to have escaped from Auschwitz on 27 April 1943, after which he wrote a report summarizing his alleged knowledge. In it, we read the following pertinent claims:
+				Witold Pilecki (13 May 1901 &mdash; 25 May 1948) was a lieutenant in the Polish Clandestine Army in German-occupied Poland. As such, he was arrested on 19 September 1940 and interned at Auschwitz under the name Tadeusz Serafi&#324;ski. Pilecki organized a Polish resistance group in that camp. He claimed to have escaped from Auschwitz on 27 April 1943, after which he wrote a report summarizing his alleged knowledge. In it, we read the following pertinent claims:
 			</p>
 			<ul>
 				<li>Pilecki listed all kinds of inmate numbers &mdash; admitted, shot, gassed, died of diseases, still present &mdash; which are highly inaccurate, if not to say freely invented.</li>
