--- a/s/index.html
+++ b/s/index.html
@@ -47,7 +47,7 @@
 						<li><a href="/s/silberschein-abraham/index.html">Silberschein, Abraham</a></li>
 						<li><a href="/s/simpson-gordon/index.html">Simpson, Gordon</a></li>
 						<li><a href="/s/six-million/index.html">Six Million (Jewish Victims)</a></li>
-						<li><a href="/s/skarzynski-kazimierz/index.html">Skarżyński, Kazimierz</a></li>
+						<li><a href="/s/skarzynski-kazimierz/index.html">Skar&#380;y&#324;ski, Kazimierz</a></li>
 						<li><a href="/s/slovakia/index.html">Slovakia</a></li>
 						<li><a href="/s/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a></li>
 						<li><a href="/s/sobibor/index.html">Sobib&oacute;r</a></li>
@@ -69,7 +69,7 @@
 						<li><a href="/s/steiner-jean-francois/index.html">Steiner, Jean-François</a></li>
 						<li><a href="/s/stern-ursula/index.html">Stern, Ursula</a></li>
 						<li><a href="/s/steyuk-yakov/index.html">Steyuk, Yakov</a></li>
-						<li><a href="/s/strawczynski-oskar/index.html">Strawczyński, Oskar</a></li>
+						<li><a href="/s/strawczynski-oskar/index.html">Strawczy&#324;ski, Oskar</a></li>
 						<li><a href="/s/streicher-julius/index.html">Streicher, Julius</a></li>
 						<li><a href="/s/strummer-deli/index.html">Strummer, Deli</a></li>
 						<li><a href="/s/stutthof/index.html">Stutthof</a></li>
