--- a/s/srebrnik-szymon/index.html
+++ b/s/srebrnik-szymon/index.html
@@ -27,7 +27,7 @@
 				</figcaption>
 			</figure>
 			<p>
-				Szymon Srebrnik (10 April 1930 &mdash; 16 Aug. 2006) was a Polish Jew who, during an interview with Judge <a href="/b/bednarz-wladyslaw/index.html">Bednarz</a> on 29 June 1945, claimed that at age 13 he was arrested with his mother and taken to the <a href="/c/chelmno/index.html">Che&#322;mno</a> Camp. He is one of only three Che&#322;mno inmates who have testified about their alleged experiences. The other two are <a href="/podchlebnik-michal/index.html">Micha&#322; Podchlebnik</a> and <a href="/z/zurawski-mieczyslaw/index.html">Mieczys&#322;aw Żurawski</a>.
+				Szymon Srebrnik (10 April 1930 &mdash; 16 Aug. 2006) was a Polish Jew who, during an interview with Judge <a href="/b/bednarz-wladyslaw/index.html">Bednarz</a> on 29 June 1945, claimed that at age 13 he was arrested with his mother and taken to the <a href="/c/chelmno/index.html">Che&#322;mno</a> Camp. He is one of only three Che&#322;mno inmates who have testified about their alleged experiences. The other two are <a href="/podchlebnik-michal/index.html">Micha&#322; Podchlebnik</a> and <a href="/z/zurawski-mieczyslaw/index.html">Mieczys&#322;aw &#379;urawski</a>.
 			</p>
 			<p>
 				A year later, Srebrnik made a deposition for the Central Commission for Jewish History. Fifteen years later, he testified during the <a href="/e/eichmann-adolf/index.html">Eichmann</a> show trial in Jerusalem, a few years after that at the German Che&#322;mno show trial at Bonn, and finally he was interviewed by Claude Lanzmann for his 1985 documentary <a href="/bibliography/index.html#Lanzmann"><i>Shoah.</i></a> Here are the main peculiarities of his various testimonies:
