--- a/w/witnesses/index.html
+++ b/w/witnesses/index.html
@@ -42,7 +42,7 @@
 				<li><a href="/b/brodsky-isaak/index.html">Brodsky, Isaak</a></li>
 				<li><a href="/b/budnik-david/index.html">Budnik, David</a></li>
 				<li><a href="/c/chamaides-heinrich/index.html">Chamaides, Heinrich</a></li>
-				<li><a href="/d/damjanovic-momcilo/index.html">Damjanović, Momčilo</a></li>
+				<li><a href="/d/damjanovic-momcilo/index.html">Damjanovi&#263;, Mom&#269;ilo</a></li>
 				<li><a href="/d/davydov-vladimir/index.html">Davydov, Vladimir</a></li>
 				<li><a href="/d/doliner-iosif/index.html">Doliner, Iosif</a></li>
 				<li><a href="/e/edelman-salman/index.html">Edelman, Salman</a></li>
@@ -81,7 +81,7 @@
 				<li><a href="/b/buki-milton/index.html">Buki, Milton</a></li>
 				<li><a href="/c/chasan-shaul/index.html">Chasan, Shaul</a></li>
 				<li><a href="/c/christophersen-thies/index.html">Christophersen, Thies</a> (SS)</li>
-				<li><a href="/c/chybinski-stanislaw/index.html">Chybiński, Stanis&#322;aw</a></li>
+				<li><a href="/c/chybinski-stanislaw/index.html">Chybi&#324;ski, Stanis&#322;aw</a></li>
 				<li><a href="/c/cohen-leon/index.html">Cohen, Leon</a></li>
 				<li><a href="/c/cykert-abraham/index.html">Cykert, Abraham</a></li>
 				<li><a href="/c/cyrankiewicz-jozef/index.html">Cyrankiewicz, Jozef</a></li>
@@ -138,7 +138,7 @@
 				<li><a href="/l/levi-primo/index.html">Levi, Primo</a></li>
 				<li><a href="/l/levy-robert/index.html">Lévy, Robert</a></li>
 				<li><a href="/l/lewental-salmen/index.html">Lewental, Salmen</a></li>
-				<li><a href="/l/lewinska-pelagia/index.html">Lewińska, Pelagia</a></li>
+				<li><a href="/l/lewinska-pelagia/index.html">Lewi&#324;ska, Pelagia</a></li>
 				<li><a href="/l/lichtenstein-mordecai/index.html">Lichtenstein, Mordecai</a></li>
 				<li><a href="/l/limousin-henri/index.html">Limousin, Henri</a></li>
 				<li><a href="/l/litwinska-sofia/index.html">Litwinska, Sofia</a></li>
@@ -188,7 +188,7 @@
 				<li><a href="/w/wirths-eduard/index.html">Wirths, Eduard</a> (SS)</li>
 				<li><a href="/w/wohlfahrt-wilhelm/index.html">Wohlfahrt, Wilhelm</a></li>
 				<li><a href="/w/wolken-otto/index.html">Wolken, Otto</a></li>
-				<li><a href="/z/zlobnicki-adam/index.html">Ź&#322;obnicki, Adam</a></li>
+				<li><a href="/z/zlobnicki-adam/index.html">&#377;&#322;obnicki, Adam</a></li>
 			</ul>
 			<h4>
 				<a id="Belzec"></a><a href="/b/belzec/index.html">Belzec</a>
@@ -238,7 +238,7 @@
 				<li><a href="/p/podchlebnik-michal/index.html">Podchlebnik, Micha&#322;</a></li>
 				<li>Sekiewicz, Mieczys&#322;aw</li>
 				<li><a href="/s/srebrnik-szymon/index.html">Srebrnik, Szymon</a></li>
-				<li><a href="/z/zurawski-mieczyslaw/index.html">Żurawski, Mieczys&#322;aw</a></li>
+				<li><a href="/z/zurawski-mieczyslaw/index.html">&#379;urawski, Mieczys&#322;aw</a></li>
 			</ul>
 			<h4>
 				<a id="Dachau"></a><a href="/d/dachau/index.html">Dachau</a>
@@ -364,7 +364,7 @@
 				<li>Schultz, Friedrich</li>
 				<li>Schwerger, Heinrich</li>
 				<li>Struck, Hermann</li>
-				<li>Szafrański, Zygmunt</li>
+				<li>Szafra&#324;ski, Zygmunt</li>
 				<li>Tamsen, Friedrich</li>
 				<li>Wackernagel, G&uuml;nther</li>
 				<li>Winter, Anton</li>
@@ -389,7 +389,7 @@
 				<li>Schwarzhuber, Josef (SS)</li>
 				<li>Suhren, Fritz (SS)</li>
 				<li>Trksakova, Irma</li>
-				<li>Woźniak&oacute;wna, Michalina</li>
+				<li>Wo&#377;niak&oacute;wna, Michalina</li>
 			</ul>
 			<h4>
 				<a id="Sachsenhausen"></a><a href="/s/sachsenhausen/index.html">Sachsenhausen</a>
@@ -405,7 +405,7 @@
 				<a id="Semlin"></a><a href="/s/semlin/index.html">Semlin</a>
 			</h4>
 			<ul>
-				<li><a href="/d/damjanovic-momcilo/index.html">Damjanović, Momčilo</a></li>
+				<li><a href="/d/damjanovic-momcilo/index.html">Damjanovi&#263;, Mom&#269;ilo</a></li>
 			</ul>
 			<h4>
 				<a id="Sobibor"></a><a href="/s/sobibor/index.html">Sobib&oacute;r</a>
@@ -480,9 +480,9 @@
 				<li><a href="/r/rajgrodzki-jerzy/index.html">Rajgrodzki, Jerzy</a></li>
 				<li><a href="/r/rajzman-samuel/index.html">Rajzman, Samuel</a> (Shmuel)</li>
 				<li><a href="/r/rosenberg-eliyahu/index.html">Rosenberg, Eliyahu</a></li>
-				<li><a href="/s/skarzynski-kazimierz/index.html">Skarżyński, Kazimierz</a></li>
+				<li><a href="/s/skarzynski-kazimierz/index.html">Skar&#380;y&#324;ski, Kazimierz</a></li>
 				<li><a href="/s/stangl-franz/index.html">Stangl, Franz</a> (SS)</li>
-				<li><a href="/s/strawczynski-oskar/index.html">Strawczyński, Oskar</a></li>
+				<li><a href="/s/strawczynski-oskar/index.html">Strawczy&#324;ski, Oskar</a></li>
 				<li><a href="/s/suchomel-franz/index.html">Suchomel, Franz</a> (SS)</li>
 				<li><a href="/s/sulkowski-jan/index.html">Su&#322;kowski, Jan</a></li>
 				<li><a href="/s/szajn-lewin-eugenia/index.html">Szajn-Lewin, Eugenia</a></li>
