--- a/z/zyklon-b-introduction-devices/index.html
+++ b/z/zyklon-b-introduction-devices/index.html
@@ -83,7 +83,7 @@
 						<td> open bottom </td>
 					</tr>
 					<tr>
-						<td><a href="/c/chybinski-stanislaw/index.html">S. Chybiński</a></td>
+						<td><a href="/c/chybinski-stanislaw/index.html">S. Chybi&#324;ski</a></td>
 						<td> 2 </td>
 						<td></td>
 						<td> lower air ducts </td>
@@ -218,7 +218,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td><a href="/l/lewinska-pelagia/index.html">P. Lewińska</a></td>
+						<td><a href="/l/lewinska-pelagia/index.html">P. Lewi&#324;ska</a></td>
 						<td> 2 </td>
 						<td></td>
 						<td> showers </td>
