--- a/f/flames-out-of-crematory-chimneys/index.html
+++ b/f/flames-out-of-crematory-chimneys/index.html
@@ -47,7 +47,7 @@
 				<li><a href="/f/friedman-arnold/index.html">Arnold Friedman</a></li>
 				<li><a href="/f/frosch-chaim/index.html">Chaim Frosch</a></li>
 				<li>Hungarian Auschwitz inmate I.M. (<a href="/bibliography/index.html#Mattogno2021">Mattogno 2021</a>, p. 380)</li>
-				<li><a href="/l/lewinska-pelagia/index.html">Pelagia Lewińska</a></li>
+				<li><a href="/l/lewinska-pelagia/index.html">Pelagia Lewi&#324;ska</a></li>
 				<li><a href="/m/muller-filip/index.html">Filip M&uuml;ller</a></li>
 				<li><a href="/n/nyiszli-miklos/index.html">Miklos Nyiszli</a></li>
 				<li><a href="/o/olere-david/index.html">David Olère</a></li>
