--- a/g/gabai-yaakov/index.html
+++ b/g/gabai-yaakov/index.html
@@ -41,7 +41,7 @@
 				<li>the percentage of inmates deemed <q>fit for labor</q> (Gabai claimed this was arbitrary, giving wildly divergent figures, while documents show that these assessments were made thoroughly);</li>
 				<li>the names and ranks of SS men in charge of the crematoria (Gabai gave names and assigned SS ranks that are completely invented);</li>
 				<li>the fate and date of the last transport from Greece (Gabai has it arrive at Auschwitz in late June 1944, with not a single inmate being registered, while the last transport from Greece in fact arrived on 16 August 1944, and the only one in June had more than 600 inmates getting registered);</li>
-				<li>the number of transports arriving in August (almost none according to Gabai, but eight major transports arrived from the &#322;&oacute;dź Ghetto);</li>
+				<li>the number of transports arriving in August (almost none according to Gabai, but eight major transports arrived from the &#322;&oacute;d&#377; Ghetto);</li>
 				<li>the month of the claimed Gypsy mass murder (June 1944 for Gabai, August for the orthodoxy, but the event is refuted by documentation);</li>
 				<li>the murder of 2,500 Jews arriving on Yom Kippur, 4 October 1944 (there is no record of any such arriving transport);</li>
 				<li>the event and number of victims of an inmate uprising (Gabai has Crema IV detonated and some 850 casualties, while Crema IV was only set on fire, and the orthodoxy claims 451 casualties);</li>
