--- a/i/israel-bruno/index.html
+++ b/i/israel-bruno/index.html
@@ -27,7 +27,7 @@
 				On 29 and 30 October 1945, he was interrogated by Polish investigative judge <a href="/b/bednarz-wladyslaw/index.html">W&#322;adys&#322;aw Bednarz</a>. Evidently due to his cooperative attitude and Polish background, he was released shortly after his interrogation.
 			</p>
 			<p>
-				With regard to the <a href="/c/chelmno/index.html">Che&#322;mno Camp</a>, Israel stated that during his brief stay at the camp, two transports with 700-800 Jews arrived from the <a href="/l/lodz-ghetto/index.html">&#322;&oacute;dź Ghetto</a> at the Ko&#322;o train station. Then the story gets bizarre. Israel asserted that the Jews were eventually gassed in <a href="/g/gas-vans/index.html">gas vans</a>, but the way this is said to have happened is utterly irrational:
+				With regard to the <a href="/c/chelmno/index.html">Che&#322;mno Camp</a>, Israel stated that during his brief stay at the camp, two transports with 700-800 Jews arrived from the <a href="/l/lodz-ghetto/index.html">&#322;&oacute;d&#377; Ghetto</a> at the Ko&#322;o train station. Then the story gets bizarre. Israel asserted that the Jews were eventually gassed in <a href="/g/gas-vans/index.html">gas vans</a>, but the way this is said to have happened is utterly irrational:
 			</p>
 			<ul>
 				<li>The Jews were picked up with trucks at the Ko&#322;o train station and driven to the <a href="/c/chelmno/index.html">Che&#322;mno Camp</a>. At this point, if a plan to kill them in gas trucks existed, one would think that exactly these trucks were used for the transit from the train station to the camp. But no, these were normal trucks. Lots of fuel was spent to get the Jews alive to the camp, and the exhaust gas produced along the way was wasted.</li>
