--- a/s/showers/index.html
+++ b/s/showers/index.html
@@ -72,7 +72,7 @@
 				<li><a href="/k/kaufmann-schafranov-sofia/index.html">Sofia Kaufmann Schafranov</a></li>
 				<li><a href="/k/kertesz-imre/index.html">Imre Kertész</a></li>
 				<li><a href="/l/laptos-leo/index.html">Leo Laptos</a></li>
-				<li><a href="/l/lewinska-pelagia/index.html">Pelagia Lewińska</a></li>
+				<li><a href="/l/lewinska-pelagia/index.html">Pelagia Lewi&#324;ska</a></li>
 				<li><a href="/p/piazza-bruno/index.html">Bruno Piazza</a> (water showers used to develop gas from powder on the floor)</li>
 				<li><a href="/b/birkenau/index.html#Polish_Wartime">Resistance writings</a> of 29 August 1942 and of late 1942/early 1943</li>
 				<li><a href="/r/rogerie-andre/index.html">André Rogerie</a></li>
