--- a/t/treblinka/index.html
+++ b/t/treblinka/index.html
@@ -243,12 +243,12 @@
 						<td> fireproof excavator dumped bodies on burning pyres </td>
 					</tr>
 					<tr>
-						<td> <a href="/s/skarzynski-kazimierz/index.html">Kazimierz Skarżyński</a> / 22 August 1944 </td>
+						<td> <a href="/s/skarzynski-kazimierz/index.html">Kazimierz Skar&#380;y&#324;ski</a> / 22 August 1944 </td>
 						<td> vacuum </td>
 						<td></td>
 					</tr>
 					<tr>
-						<td> <a href="/s/skarzynski-kazimierz/index.html">Kazimierz Skarżyński</a> / 23 August 1944 </td>
+						<td> <a href="/s/skarzynski-kazimierz/index.html">Kazimierz Skar&#380;y&#324;ski</a> / 23 August 1944 </td>
 						<td> no method stated </td>
 						<td> <q>special chamber</q> </td>
 					</tr>
@@ -276,7 +276,7 @@
 						and under cremation grates </td>
 					</tr>
 					<tr>
-						<td> <a href="/s/strawczynski-oskar/index.html">Oskar Strawczyński</a> / 7 October 1945 </td>
+						<td> <a href="/s/strawczynski-oskar/index.html">Oskar Strawczy&#324;ski</a> / 7 October 1945 </td>
 						<td> vacuum or engine exhaust gas </td>
 						<td> &mdash; </td>
 					</tr>
@@ -357,13 +357,13 @@
 				This Polish government report of 15 November 1942 is of central importance for writing the history of the Treblinka Camp, because of its early date, its detailed description, its <q>authoritativeness</q> as an official government statement, and because it had been plagiarized and thus spread by other victims repeating its features (<a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik</a>, <a href="/g/goldfarb-abraham-i/index.html">Goldfarb</a>). However, its embarrassing insistence on steam chambers has orthodox historians resort to blatant forgeries to hide this fact from their readers. Yitzhak Arad, for instance, who contributed the entry on Treblinka to <a href="/bibliography/index.html#Gutman">Gutman&rsquo;s 1990</a> <i>Encyclopedia of the Holocaust,</i> discusses this Polish report in his 1987 book, yet writes four times that the report is about <i>gas</i> chambers, when in fact it is about <i>steam</i> chambers (<a href="/bibliography/index.html#Arad1987">Arad 1987</a>, pp. 354f.).
 			</p>
 			<p>
-				It took the radical intervention of a Polish investigative judge to put an end to this testimonial anarchy. <a href="/l/lukaszkiewicz-zdzislaw/index.html">Zdzis&#322;aw &#322;ukaszkiewicz</a> decided in 1946 to ditch all witness statements on Treblinka that contain anything else but engine-exhaust gases, and to write a cleansed version of Treblinka&rsquo;s history. No more steam, vacuum, chlorine, chlorinated lime, electrocution, ether, toxic fluids or fuel additives, mobile gas chambers and delayed-action gases and whatever else had been claimed over the past four years. <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a> basically took Wiernik&rsquo;s later version of the tale, and dropped all the rest.
+				It took the radical intervention of a Polish investigative judge to put an end to this testimonial anarchy. <a href="/l/lukaszkiewicz-zdzislaw/index.html">Zdzis&#322;aw &#321;ukaszkiewicz</a> decided in 1946 to ditch all witness statements on Treblinka that contain anything else but engine-exhaust gases, and to write a cleansed version of Treblinka&rsquo;s history. No more steam, vacuum, chlorine, chlorinated lime, electrocution, ether, toxic fluids or fuel additives, mobile gas chambers and delayed-action gases and whatever else had been claimed over the past four years. <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a> basically took Wiernik&rsquo;s later version of the tale, and dropped all the rest.
 			</p>
 			<p>
 				And that is essentially what the world has been stuck with ever since.
 			</p>
 			<p>
-				Later witness accounts, such as that by <a href="/r/rosenberg-eliyahu/index.html">Eliyahu Rosenberg</a>, followed this pattern, probably more influenced by <a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik</a>&rsquo;s account, published in several languages and well-known among the survivor communities, rather than by <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a>&rsquo;s report. Early orthodox holocaust historians, such as <a href="/bibliography/index.html#Poliakov">Léon Poliakov</a> (1951) and <a href="/bibliography/index.html#Reitlinger">Gerald Reitlinger</a> (1953), gladly followed in <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a>&rsquo;s footsteps by simply copying over to Treblinka (and also <a href="/s/sobibor/index.html">Sobib&oacute;r</a>) what <a href="/g/gerstein-kurt/index.html">Kurt Gerstein</a> had claimed for the <a href="/b/belzec/index.html">Belzec</a> Camp: diesel-engine exhaust gasses had been used, period. It matters not that Gerstein has been totally discredited as a witness in the meantime. (<a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik</a> never mentioned the type of engine.)
+				Later witness accounts, such as that by <a href="/r/rosenberg-eliyahu/index.html">Eliyahu Rosenberg</a>, followed this pattern, probably more influenced by <a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik</a>&rsquo;s account, published in several languages and well-known among the survivor communities, rather than by <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a>&rsquo;s report. Early orthodox holocaust historians, such as <a href="/bibliography/index.html#Poliakov">Léon Poliakov</a> (1951) and <a href="/bibliography/index.html#Reitlinger">Gerald Reitlinger</a> (1953), gladly followed in <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a>&rsquo;s footsteps by simply copying over to Treblinka (and also <a href="/s/sobibor/index.html">Sobib&oacute;r</a>) what <a href="/g/gerstein-kurt/index.html">Kurt Gerstein</a> had claimed for the <a href="/b/belzec/index.html">Belzec</a> Camp: diesel-engine exhaust gasses had been used, period. It matters not that Gerstein has been totally discredited as a witness in the meantime. (<a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik</a> never mentioned the type of engine.)
 			</p>
 			<p>
 				The propaganda image painted by historians was cast in stone during two West-German <a href="/s/show-trials/index.html">show trials</a> against defendants who had done duty at the Treblinka Camp. Both took place at D&uuml;sseldorf. The first, lasting from October 1964 to September 1965, saw ten defendants, among them <a href="/f/franz-kurt/index.html">Kurt Franz</a>. He was sentenced to life imprisonment for the collective murder of 300,000 persons and for several individual murders. The second Treblinka trial, which took place from May to December 1970, had only one defendant: the second Treblinka commandant <a href="/s/stangl-franz/index.html">Franz Stangl</a>. He was sentenced to life imprisonment for contributing to the murder of at least 400,000 Jews, but he died before the verdict came into effect.
@@ -372,7 +372,7 @@
 				While more than 100 witnesses had been interrogated for the first trial, this number went down to some 50 for the second trial. At that point in time, more than 20 years after the alleged events &mdash; and most importantly after the <a href="/e/eichmann-adolf/index.html">Eichmann</a> Trial &mdash; the witness accounts were probably contaminated with the propaganda incessantly spread around the globe. However, neither the pre-trial investigators nor the judges did anything to find out what the sources of a witness&rsquo;s knowledge were. In fact, the procedures of West Germany&rsquo;s judicial office called <a href="/z/zentrale-stelle/index.html"><i>Zentrale Stelle</i></a>, which was spearheading the pre-trial investigations, made sure that witnesses&rsquo; memories were <i>systematically</i> contaminated with what the investigators already thought they <q>knew</q> about Treblinka and every defendant. (See the entry on the <a href="/z/zentrale-stelle/index.html"><i>Zentrale Stelle</i></a>.)
 			</p>
 			<p>
-				Furthermore, the D&uuml;sseldorf court had orthodox historians Helmut Krausnick (1964) and Wolfgang Scheffler (1971) testify as <q>experts</q> about the camp&rsquo;s history. Both orthodox historians repeated what they had learned from sources, such as <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a>&rsquo;s rigged report, and earlier accounts by their colleagues, such as Poliakov, Reitlinger and <a href="/bibliography/index.html#Hilberg">Raul Hilberg</a>. None of them made the effort to go to the early sources as laid out in the above table.
+				Furthermore, the D&uuml;sseldorf court had orthodox historians Helmut Krausnick (1964) and Wolfgang Scheffler (1971) testify as <q>experts</q> about the camp&rsquo;s history. Both orthodox historians repeated what they had learned from sources, such as <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a>&rsquo;s rigged report, and earlier accounts by their colleagues, such as Poliakov, Reitlinger and <a href="/bibliography/index.html#Hilberg">Raul Hilberg</a>. None of them made the effort to go to the early sources as laid out in the above table.
 			</p>
 			<p>
 				Cornered this way, the defendants made the only smart choice open to them: they were cooperative with investigators, prosecutors and judges, confirmed what was considered to be true already anyway, didn&rsquo;t contradict what orthodox historians claimed, yet at the same time tried to minimize as much as possible their own responsibility and contribution for what allegedly happened.
@@ -384,7 +384,7 @@
 				The entire absurdity of this procedure became glaringly apparent during the Jerusalem show trial against <a href="/d/demjanjuk-john/index.html">John Demjanjuk</a>, who was accused of having assisted in the mass murder of Jews at Treblinka as a Ukrainian auxiliary. When that case was reviewed by Israel&rsquo;s Supreme Court, it threw out the entire case because all witness testimonies were considered unreliable, and all witnesses untrustworthy. But virtually the same witnesses had testified with the same stories at D&uuml;sseldorf.
 			</p>
 			<p>
-				Yet the propaganda image invented by Polish wartime propagandists, plagiarized by <a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik</a>, given official approval by <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a>, and cast in legal stone by German judges, stands to this day &mdash; protected in many countries by the threat of imprisonment for anyone who disagrees.
+				Yet the propaganda image invented by Polish wartime propagandists, plagiarized by <a href="/w/wiernik-jankiel-yankiel/index.html">Wiernik</a>, given official approval by <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a>, and cast in legal stone by German judges, stands to this day &mdash; protected in many countries by the threat of imprisonment for anyone who disagrees.
 			</p>
 			<table class="table">
 				<caption>Death-Toll Propaganda</caption>
@@ -437,7 +437,7 @@
 					</tr>
 					<tr>
 						<td> 800,000 </td>
-						<td colspan="2"> Zdzis&#322;aw <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a> </td>
+						<td colspan="2"> Zdzis&#322;aw <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a> </td>
 					</tr>
 					<tr>
 						<td> 781,000 </td>
@@ -478,16 +478,16 @@
 				<a id="Polish"></a>Polish Investigations
 			</h4>
 			<p>
-				On 6 November 1945, a combined Jewish-Polish commission headed by Judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a> visited the former Treblinka campgrounds. They discovered that it had been devastated by wild diggings as well as by numerous explosions of bombs and artillery shells. These were created by the local populace and Soviet soldiers in search of gold and jewelry. They left behind a moonscape with uncounted craters up to 6 meters deep and 25 meters in diameter, and scattered human remains and garbage.
+				On 6 November 1945, a combined Jewish-Polish commission headed by Judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a> visited the former Treblinka campgrounds. They discovered that it had been devastated by wild diggings as well as by numerous explosions of bombs and artillery shells. These were created by the local populace and Soviet soldiers in search of gold and jewelry. They left behind a moonscape with uncounted craters up to 6 meters deep and 25 meters in diameter, and scattered human remains and garbage.
 			</p>
 			<p>
-				Between 9 and 13 November 1945, Judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a> supervised a series of excavations on the former campgrounds. While they found scattered human remains in a few places, they did not locate any mass graves or large volumes of soil mixed with ashes or human remains.
+				Between 9 and 13 November 1945, Judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a> supervised a series of excavations on the former campgrounds. While they found scattered human remains in a few places, they did not locate any mass graves or large volumes of soil mixed with ashes or human remains.
 			</p>
 			<p>
-				On 9 and 10 August 1946, Judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a> searched for mass graves in the area of the labor camp Treblinka I. His findings were quantitatively similar to the Soviet investigation mentioned above.
+				On 9 and 10 August 1946, Judge <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a> searched for mass graves in the area of the labor camp Treblinka I. His findings were quantitatively similar to the Soviet investigation mentioned above.
 			</p>
 			<p>
-				Therefore, <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a>&rsquo;s investigations were a complete failure. Although he conducted excavations at the spot where the witness <a href="/r/rajzman-samuel/index.html">Samuel Rajzman</a> had claimed a mass grave was located, nothing was discovered. Another dig at a location pointed out by witnesses to be the place where the two alleged gassing facilities once were encountered merely <q>undisturbed layers of earth.</q> The amount of burned and unburned human remains found was miniscule compared to the magnitude of slaughter claimed.
+				Therefore, <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a>&rsquo;s investigations were a complete failure. Although he conducted excavations at the spot where the witness <a href="/r/rajzman-samuel/index.html">Samuel Rajzman</a> had claimed a mass grave was located, nothing was discovered. Another dig at a location pointed out by witnesses to be the place where the two alleged gassing facilities once were encountered merely <q>undisturbed layers of earth.</q> The amount of burned and unburned human remains found was miniscule compared to the magnitude of slaughter claimed.
 			</p>
 			<p>
 				Hence, neither the Soviets nor the Poles uncovered even the slightest scrap of proof that Treblinka II, the alleged extermination camp, was the location of any kind of mass murder. However, the Soviets did not dig at all, and the Poles only in a few places.
@@ -517,7 +517,7 @@
 				The orthodoxy claims that some 764,000 bodies were buried at Treblinka before the incineration of corpses was started. The British investigations only located a disturbed-soil volume of some 15,600 m&sup3;. Taking the top 50 cm off as a grave cover, this leaves some 14,300 m&sup3; to bury corpses. If the bodies were as densely packed as in the mass graves discovered at the Treblinka I Camp (only a little more than a body per cubic meter), then only some 14,300 bodies were buried there. If we increase that packing density to an unheard-of extreme value of 10 bodies per cubic meter, then some 143,000 could have been buried there.
 			</p>
 			<p>
-				However, some of that disturbed volume resulted from the trenches dug by <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a> only containing undisturbed layers of soil, and quite a few of the bomb craters and wild digs of the immediate post-war time undoubtedly also turned otherwise undisturbed soil into disturbed soil.
+				However, some of that disturbed volume resulted from the trenches dug by <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a> only containing undisturbed layers of soil, and quite a few of the bomb craters and wild digs of the immediate post-war time undoubtedly also turned otherwise undisturbed soil into disturbed soil.
 			</p>
 			<p>
 				No matter how we turn it, if we follow the currently available data, there was no room to bury at least (764,000 &mdash; 143,000 =) 621,000 corpses. Where did these corpses go?
@@ -526,7 +526,7 @@
 				<a id="Other"></a>Other Forensic Considerations
 			</h4>
 			<p>
-				Diesel-engine exhaust gas is unable to kill within the time frame claimed. Hence, unfit for the claimed job was Treblinka&rsquo;s murder weapon &mdash; which the orthodoxy decided upon only after <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#322;ukaszkiewicz</a>&rsquo;s manipulation of the historical record, and after early orthodox historians&rsquo; decision to cast claimed features of the <a href="/b/belzec/index.html">Belzec</a> Camp onto the Treblinka Camp.
+				Diesel-engine exhaust gas is unable to kill within the time frame claimed. Hence, unfit for the claimed job was Treblinka&rsquo;s murder weapon &mdash; which the orthodoxy decided upon only after <a href="/l/lukaszkiewicz-zdzislaw/index.html">&#321;ukaszkiewicz</a>&rsquo;s manipulation of the historical record, and after early orthodox historians&rsquo; decision to cast claimed features of the <a href="/b/belzec/index.html">Belzec</a> Camp onto the Treblinka Camp.
 			</p>
 			<p>
 				The orthodoxy&rsquo;s narrative regarding the incineration of killed inmates at Treblinka would have created formidable logistical challenges for the perpetrators and their assistants. All the corpses claimed had to be burned with <a href="/o/open-air-incinerations/index.html">open-air incinerations</a> on huge pyres, since the camp had no cremation furnaces. The table shows some data about the claimed events.
