--- a/a/absurd-claims/index.html
+++ b/a/absurd-claims/index.html
@@ -34,7 +34,7 @@
 				<li>murder by shit: force Jews to lay down in an excrement pit, then force other Jews to defecate on their face until they suffocate (see the <a href="/b/belzec/index.html">entry on Belzec</a>);</li>
 				<li>In huge concrete mixers, Jews were ground to a pulp which then served as material for road pavement (<a href="/o/ochshorn-isaac-egon/index.html">I. Ochshorn</a>);</li>
 				<li><a href="/s/soap-from-jewish-corpses/index.html">soap production from human fat</a> with imprinted letters <q>RIF</q> &mdash; <q><i>Reines Juden Fett</i></q> (pure Jewish fat: see the entry on <a href="/s/soap-from-jewish-corpses/index.html">Soap, from Jewish Corpses</a>);</li>
-				<li><a href="/o/olere-david/index.html">the SS made sausage in a crematorium out of human flesh</a> (<q>RIW</q>– <q><i>Reine Juden Wurst</i></q>? <a href="/o/olere-david/index.html">D. Olère</a>);</li>
+				<li><a href="/o/olere-david/index.html">the SS made sausage in a crematorium out of human flesh</a> (<q>RIW</q> &mdash; <q><i>Reine Juden Wurst</i></q>? <a href="/o/olere-david/index.html">D. Ol&egrave;re</a>);</li>
 				<li><a href="/l/lampshades-of-human-skin/index.html">lampshades</a>, book covers, driving gloves for SS officers, saddles, riding breeches, house slippers, and ladies&rsquo; handbags of human skin (see the entry on <a href="/l/lampshades-of-human-skin/index.html">Lampshades, of Human Skin</a>);</li>
 				<li>pornographic pictures on canvasses made of human skin (<a href="/bibliography/index.html#IMT"><i>IMT</i></a>, Vol. 30, p. 469);</li>
 				<li>mummified human thumbs used as light switches in the house of Ilse Koch, wife of camp commandant Koch (Buchenwald Camp; Kurt Glass, <i>The New York Times,</i> 10 April 1995);</li>
@@ -74,7 +74,7 @@
 				<li>bashing people&rsquo;s brains in with a pedal-driven brain-bashing machine while listening to the radio (<a href="/p/propaganda/index.html">Soviet propaganda, as earlier</a>);</li>
 				<li>cremation of bodies in blast furnaces (see the subsection <q><a href="/b/birkenau/index.html#Soviet">Soviet propaganda of the entry on Birkenau</a></q>);</li>
 				<li><a href="/s/self-immolating-bodies/index.html">cremation of human bodies using no fuel at all</a> (see the entry on <a href="/s/self-immolating-bodies/index.html">Self-Immolating Bodies</a>);</li>
-				<li><a href="/fat-extracted-from-burning-corpses/index.html">skimming off liquefied, boiling human fat from open-air cremation fires</a> (see the entry on <a href="/fat-extracted-from-burning-corpses/index.html">Fat, Extracted from Burning Corpses</a>);</li>
+				<li><a href="/f/fat-extracted-from-burning-corpses/index.html">skimming off liquefied, boiling human fat from open-air cremation fires</a> (see the entry on <a href="/f/fat-extracted-from-burning-corpses/index.html">Fat, Extracted from Burning Corpses</a>);</li>
 				<li>mass graves containing hundreds of thousands of bodies, removed without a trace within a few weeks (see the entries on <a href="/c/cremation-propaganda/index.html">Cremation Propaganda</a> and <a href="/l/lumberjacks/index.html">Lumberjacks</a>);</li>
 				<li>killing 840,000 Russian POWs at <a href="/s/sachsenhausen/index.html">Sachsenhausen</a>, and burning the bodies in four portable furnaces (see the entry on <a href="/s/sachsenhausen/index.html">Sachsenhausen</a>);</li>
 				<li><a href="/e/explosives-to-erase-corpses/index.html">eliminating corpses with explosives</a> (<a href="/h/hoss-rudolf/index.html">R. H&ouml;ss</a>, <a href="/d/davydov-vladimir/index.html">V. Davydov</a>);</li>
