--- a/m/morgen-konrad/index.html
+++ b/m/morgen-konrad/index.html
@@ -62,7 +62,7 @@
 				</blockquote>
 				<p>
 					However, <a href="/s/self-immolating-bodies/index.html">self-immolating bodies</a> simply do not exist.</li>
-				<li>To develop this magical system, Wirth allegedly <q>received no aid, no instructions, but had to do it all by himself.</q> The mainstream narrative claims, however, that <a href="/blobel-paul/index.html">Paul Blobel</a> was the magician who pulled off this trick.</li>
+				<li>To develop this magical system, Wirth allegedly <q>received no aid, no instructions, but had to do it all by himself.</q> The mainstream narrative claims, however, that <a href="/b/blobel-paul/index.html">Paul Blobel</a> was the magician who pulled off this trick.</li>
 				<li>Morgen also misrepresented the killing of incurable mental patients as having happened in an institution that Wirth had set up, who is said to have deceived the mental institutions sending patients to him about their impending fate, when in fact Wirth merely had advisory functions at several of the mental institutions carrying out the <a href="/e/euthanasia/index.html">euthanasia program</a>.</li>
 			</ul>
 			<p>
