--- a/f/farber-yuri/index.html
+++ b/f/farber-yuri/index.html
@@ -71,7 +71,7 @@
 				This testimony relates to one of many events claimed to have been part of the alleged German clean-up operation which the orthodoxy calls <a href="/a/aktion-1005/index.html"><i>Aktion</i> 1005</a>. The above exposition demonstrates conclusively that Farber&rsquo;s entire scenario is completely detached from reality. It cannot be based on experience, but on mere propaganda, imagination and delusion.
 			</p>
 			<p>
-				(See also the similar accounts by <a href="/blyazer-a/index.html">A. Blyazer</a>, <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a> and <a href="/g/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 670-677.)
+				(See also the similar accounts by <a href="/b/blyazer-a/index.html">A. Blyazer</a>, <a href="/z/zaydel-matvey/index.html">Matvey Zaydel</a> and <a href="/g/gol-szloma/index.html">Szloma Gol</a>; for more details, see <a href="/bibliography/index.html#Mattogno2022c">Mattogno 2022c</a>, pp. 670-677.)
 			</p>
 			<!-- #bbinclude "footer.incl" -->
 </article><div class="col-md-3"><nav class="navigation" id="nav-hhp"></nav><hr><aside id="aside"></aside><script src="/_assets/js/aside-min.js"></script></div></div></main><footer class="footer" id="footer"><p class="text-center">Copyright &copy; 2022-2024 Academic Research Group</p></footer>
