--- a/f/false-witnesses/index.html
+++ b/f/false-witnesses/index.html
@@ -35,7 +35,7 @@
 			<ul>
 				<li><a href="/a/avey-denis/index.html">Denis Avey</a></li>
 				<li><a href="/c/corry-joe/index.html">Joe Corry</a></li>
-				<li><a href="/doessekker-bruno/index.html">Bruno Doessekker</a> (aka Binjamin Wilkomirski)</li>
+				<li><a href="/d/doessekker-bruno/index.html">Bruno Doessekker</a> (aka Binjamin Wilkomirski)</li>
 				<li><a href="/gray-martin/index.html">Martin Gray</a> (aka Mieczyslaw Grajewski)</li>
 				<li>Marie Sophie Hingst</li>
 				<li><a href="/hirt-joseph/index.html">Joseph Hirt</a></li>
