--- a/f/false-witnesses/index.html
+++ b/f/false-witnesses/index.html
@@ -36,22 +36,22 @@
 				<li><a href="/a/avey-denis/index.html">Denis Avey</a></li>
 				<li><a href="/c/corry-joe/index.html">Joe Corry</a></li>
 				<li><a href="/d/doessekker-bruno/index.html">Bruno Doessekker</a> (aka Binjamin Wilkomirski)</li>
-				<li><a href="/gray-martin/index.html">Martin Gray</a> (aka Mieczyslaw Grajewski)</li>
+				<li><a href="/g/gray-martin/index.html">Martin Gray</a> (aka Mieczyslaw Grajewski)</li>
 				<li>Marie Sophie Hingst</li>
-				<li><a href="/hirt-joseph/index.html">Joseph Hirt</a></li>
-				<li><a href="/holstein-bernard/index.html">Bernard Holstein</a></li>
+				<li><a href="/h/hirt-joseph/index.html">Joseph Hirt</a></li>
+				<li><a href="/h/holstein-bernard/index.html">Bernard Holstein</a></li>
 				<li>Magdolna Kaiser</li>
 				<li>Rosemarie Koczy</li>
-				<li><a href="/kosinski-jerzy/index.html">Jerzy Kosinski</a></li>
-				<li><a href="/marco-enric/index.html">Enric Marco</a></li>
+				<li><a href="/k/kosinski-jerzy/index.html">Jerzy Kosinski</a></li>
+				<li><a href="/m/marco-enric/index.html">Enric Marco</a></li>
 				<li>Alfred Mende (aka Isaac Lewinson)</li>
 				<li>Karin Mylius</li>
 				<li>Wolfgang Seibert</li>
 				<li>Axel Sp&ouml;rl</li>
 				<li><a href="/u/uthgenannt-otto/index.html">Otto Uthgenannt</a></li>
 				<li>Irena Wachendorff</li>
-				<li><a href="/wael-monique-de/index.html">Monique de Wael</a> (aka Misha Defonesca)</li>
-				<li><a href="/watt-donald/index.html">Donald Watt</a></li>
+				<li><a href="/w/wael-monique-de/index.html">Monique de Wael</a> (aka Misha Defonesca)</li>
+				<li><a href="/w/watt-donald/index.html">Donald Watt</a></li>
 				<li>Laurel Rose Willson</li>
 				<li>to be completed</li>
 			</ul>
